Styled and added info to database addition forms. Added margin to prevent footer from covering content.

--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,3 +1,6 @@
+body .container {
+    margin-bottom: 90px;
+}
 html {
     position: relative;
     min-height: 100%;
